Fix: Estructura final de endpoints, limpieza de controladores y swagger definitivo
